[gd_scene load_steps=6 format=3 uid="uid://7ah3bf7cn7a"]

[ext_resource type="Texture2D" uid="uid://cbrn8x7iydw63" path="res://Assets/vertical-medium.png" id="1_48ejq"]
[ext_resource type="Script" path="res://special_description_panel.gd" id="1_kbi01"]
[ext_resource type="FontFile" uid="uid://uqx0pemtyyk7" path="res://Themes/zekton rg.otf" id="2_mqpc5"]
[ext_resource type="Texture2D" uid="uid://i5cao7fn5vrc" path="res://Assets/energy.png" id="3_hq8kc"]
[ext_resource type="PackedScene" uid="uid://dq28ygginmj7" path="res://stat_container.tscn" id="5_v2w3d"]

[node name="SpecialPanel" type="Node2D"]
script = ExtResource("1_kbi01")

[node name="TallPanel" type="Sprite2D" parent="."]
position = Vector2(1.29574, 1.62759)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_48ejq")
centered = false

[node name="ActionLabel" type="Label" parent="."]
offset_left = 37.4226
offset_top = 8.00548
offset_right = 297.423
offset_bottom = 40.0055
theme_override_font_sizes/font_size = 26
text = "Special"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DescriptionName" type="Label" parent="."]
offset_left = 14.1427
offset_top = 45.1502
offset_right = 314.143
offset_bottom = 68.1503
theme_override_font_sizes/font_size = 18
text = "Lighting Bolt"
autowrap_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = 13.549
offset_top = 69.7555
offset_right = 65.549
offset_bottom = 90.7555
theme_override_font_sizes/font_size = 12
text = "Cost:"

[node name="CostLabel" type="Label" parent="."]
offset_left = 63.5699
offset_top = 69.7555
offset_right = 77.5699
offset_bottom = 90.7555
theme_override_font_sizes/font_size = 12
text = "5
"

[node name="WhiteBolt" type="Sprite2D" parent="."]
position = Vector2(82.49, 77.5438)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_hq8kc")

[node name="Label2" type="Label" parent="."]
offset_left = 13.0395
offset_top = 84.8803
offset_right = 99.0395
offset_bottom = 105.88
theme_override_font_sizes/font_size = 12
text = "Affects:"

[node name="AffectsLabel" type="Label" parent="."]
offset_left = 89.8918
offset_top = 84.8803
offset_right = 270.892
offset_bottom = 105.88
theme_override_font_sizes/font_size = 12
text = "All Friendly Units"

[node name="DescriptionLabel" type="Label" parent="."]
offset_left = 14.2505
offset_top = 99.5631
offset_right = 324.25
offset_bottom = 183.563
theme_override_fonts/font = ExtResource("2_mqpc5")
theme_override_font_sizes/font_size = 15
text = "No Action Selected."
autowrap_mode = 2

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 16.6744
offset_top = 390.892
offset_right = 16.6744
offset_bottom = 390.892
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = -35

[node name="StatContainer" parent="GridContainer" instance=ExtResource("5_v2w3d")]
layout_mode = 2

[node name="StatContainer2" parent="GridContainer" instance=ExtResource("5_v2w3d")]
layout_mode = 2

[node name="StatContainer3" parent="GridContainer" instance=ExtResource("5_v2w3d")]
layout_mode = 2

[node name="StatContainer4" parent="GridContainer" instance=ExtResource("5_v2w3d")]
layout_mode = 2

[node name="StatContainer5" parent="GridContainer" instance=ExtResource("5_v2w3d")]
layout_mode = 2

[node name="StatContainer6" parent="GridContainer" instance=ExtResource("5_v2w3d")]
layout_mode = 2

[node name="StatContainer7" parent="GridContainer" instance=ExtResource("5_v2w3d")]
layout_mode = 2
